# project-katklo-pbundyra

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/game/: audio.rs  boosters.rs  bullets.rs  camera.rs  components.rs  living_being.rs  map.rs  mod.rs  monster.rs  monster_ai.rs  moster_ai.rs  player.rs  powerups.rs  utils.rs
src/main_menu/: mod.rs
src/menu/: mod.rs  structs.rs  systems.rs  utils.rs
src/utils/: mod.rs
