[package]
name = "mario_mim"
version = "0.1.0"
authors = [
    "Katarzyna Kloc <kasiakloc00@gmail.com>",
    "Patryk Bundyra <bundyradev@gmail.com>",
]
edition = "2021"

[dependencies]
bevy = { version = "0.7", features = [
    "render",
    "animation",
    "bevy_winit",
    "bevy_gilrs",
    "png",
    "hdr",
    "filesystem_watcher",
    "x11"
] }
bevy_rapier2d = "0.13"
bevy_kira_audio = { version = "0.9", features = ["ogg", "wav"] }
rand = "*"
wasm-bindgen = "0.2"

[profile.dev.package.bevy_rapier2d]
opt-level = 3
